--- a/Livestreamer Twitch Viewer/Properties/Resources.resx
+++ b/Livestreamer Twitch Viewer/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="livestreamer_v1_12_2_win32_setup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\livestreamer_setup.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="load_icon_png_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\load-icon-png-10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OldNewspaperTypes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OldNewspaperTypes.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
